--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,17 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #ff0070;
+  --text-accent-color: #DB00FF;
+  --text-color: #F1B2CE;
+  --bg-color: #000028;
+  background-image: url("/images/cover-image-dark.png");
+}
+
+.title-decor {
+  color: var(--bg-color);
+}
+
+.content__title {
+  color: var(--accent-color);
 }
