--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,59 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #FF8DCB;
+  --text-accent-color: #FFC2E6;
+  --text-color: #353430;
+  --bg-color: #FFF1F7;
+  background-image: url("/images/cover-image-light.png");
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  border: 1px solid;
+  border-image-source: linear-gradient(var(--text-color), var(--text-color)); 
+}
+
+.header__logo::before {
+  content: '';
+}
+
+.header__logo::after {
+  width: 0;
+  height: 0;
+  box-shadow: none;
+}
+
+.header__theme-menu-button {
+  color: var(--text-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--text-color);
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid rgba(50, 49, 45, 0.4);
+ }
+ 
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid rgba(50, 49, 45, 0.4);
+}
+
+.article__link:focus-visible {
+  outline: 1px solid var(--text-color);
+}
+
+.title-decor {
+  color: var(--text-color);
+}
+
+.content__title {
+  color: var(--text-color);
 }
