--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,304 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  background-image: url("/images/cover-image.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: var(--bg-color);
+  font-family: IBM Plex mono, sans-serif;
+  font-size: 18px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 58px;
+}
+
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  border: 1px solid;
+  border-image-source: linear-gradient(var(--accent-color), var(--accent-color)); 
+}
+
+.decorated-zone::before {
+  border-image-width: 1px 25px;
+}
+
+.decorated-zone::after {
+  border-image-width: 25px 1px;
+}
+
+.header {
+  position: relative;
+  display: grid;
+  gap: 58px;
+}
+
+.header__logo {
+  position: relative;
+}
+
+.header__logo::before {
+  content: 'rec';
+  position: absolute;
+  left: calc(100%-52px);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  text-transform: uppercase;
+  color: var(--accent-color);
+  margin-inline-end: 29px;
+}
+
+.header__logo::after {
+  content: '';
+  position: absolute;
+  left: calc(100%-18px);
+  top: 7px;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  border-radius: 50%;
+  background: var(--accent-color);
+  width: 9px;
+  height: 9px;
+  box-shadow: 0px 0px 4px 2px var(--accent-color);
+  margin-inline-end: 8px;
+}
+
+.header__theme-menu {
+ padding-block-start: 54px;
+ justify-self: right;
+}
+
+.header__theme-menu-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: end;
+}
+
+.header__theme-menu-button {
+  display: inline-block;
+  font: 400;
+  text-transform: lowercase;
+  border-style: none;
+  color: var(--accent-color);
+  background-color: transparent;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid rgba(255, 0, 112, 0.4);
+ }
+ 
+ .header__theme-menu-button:focus {
+   outline: none;
+ }
+ 
+ .header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid rgba(255, 0, 112, 0.4);
+ }
+
+.header__title {
+  color: var(--text-accent-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  font-weight: 700;
+  line-height: 96px;
+  letter-spacing: 0em;
+  text-align: left;
+  justify-self: flex-start;
+}
+
+.header__text {
+  justify-self: flex-end;
+  margin-block-end: 58px;
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+  color: var(--bg-color);
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.content {
+  display: grid;
+  gap: 25px;
+}
+
+.content__title {
+  font-weight: 700;
+  line-height: 23px;
+  font-size: 18px;
+  color: var(--accent-color);
+}
+
+.article {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.article__title {
+  font-weight: 400;
+}
+
+.article__text {
+  color: var(--text-color);
+}
+
+
+.article__link {
+  text-decoration: none;
+  text-shadow: 1px 1px 0 var(--accent-color);
+}
+
+.article__link:hover {
+ text-decoration: underline;
+}
+
+.article__link:focus {
+  outline: none;
+}
+
+.article__link:focus-visible {
+  outline: 1px solid var(--accent-color);
+}
+
+.gallery {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.gallery__list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 355px);
+  place-items: center;
+  gap: 10px;
+  list-style: none;
+}
+
+.gallery__image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.footer {
+  min-height: 668px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__title {
+  color: var(--text-accent-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: 700;
+  line-height: 96px;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+@media (min-width: 768px) {
+  .header__text {
+    max-width: 50%;
+  }
+
+  .content {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .content__title {
+    grid-row: 1 / 4;
+   }
+
+  .article {
+    grid-column: 2 / 4;
+  }
+
+  .content:nth-of-type(2) .content__title{
+    grid-column: 1 / 1;
+    grid-row: 1;
+   }
+
+   .content:nth-of-type(2) .article {
+    grid-column: 1  / 4;
+  }
+
+  .gallery__list {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+    place-items: center;
+    gap: 10px;
+
+  }
+
+  .gallery__list-item:nth-child(1) {
+    grid-column: 1 / span 2;
+    grid-row: 1;
+  }
+
+  .gallery__list-item:nth-child(2) {
+    grid-column: 3 / -1;
+    grid-row: 1 / 3;
+  }
+
+  .gallery__list-item:nth-child(3) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+
+  .gallery__list-item:nth-child(4) {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .gallery__list-item:nth-child(5) {
+    grid-column: 2 / -1;
+    grid-row: 3 / 4;
+  }
+
+}
+
+@media (min-width: 1024px) {
+  .header__theme-menu {
+    justify-self: center;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .content:nth-of-type(2) .article {
+    grid-column: auto;
+    grid-row: 2;
+  }
 }
