--- a/styles/dark.css
+++ b/styles/dark.css
@@ -23,3 +23,37 @@
 .content__title {
   color: var(--accent-color);
 }
+
+.header__logo {
+  position: relative;
+}
+
+.header__logo::before {
+  content: 'rec';
+  position: absolute;
+  left: calc(100% - 60px);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  text-transform: uppercase;
+  color: var(--accent-color);
+  margin-inline-end: 29px;
+}
+
+.header__logo::after {
+  content: '';
+  position: absolute;
+  left: calc(100% - 18px);
+  top: 8px;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  border-radius: 50%;
+  background: var(--accent-color);
+  width: 9px;
+  height: 9px;
+  box-shadow: 0px 0px 4px 2px var(--accent-color);
+  margin-inline-end: 8px;
+}
