--- a/styles/light.css
+++ b/styles/light.css
@@ -9,23 +9,11 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --accent-color: #FF8DCB;
-  --text-accent-color: #FFC2E6;
+  --accent-color: #ff8dcb;
+  --text-accent-color: #ffc2e6;
   --text-color: #353430;
-  --bg-color: #FFF1F7;
+  --bg-color: #fff1f7;
   background-image: url("/images/cover-image-light.png");
-}
-
-.decorated-zone::before,
-.decorated-zone::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  border: 1px solid;
-  border-image-source: linear-gradient(var(--text-color), var(--text-color)); 
 }
 
 .header__logo::before {
@@ -33,9 +21,10 @@
 }
 
 .header__logo::after {
+  content: '';
+  box-shadow: none;
   width: 0;
   height: 0;
-  box-shadow: none;
 }
 
 .header__theme-menu-button {
@@ -48,8 +37,8 @@
 
 .header__theme-menu-button:hover {
   outline: 1px solid rgba(50, 49, 45, 0.4);
- }
- 
+}
+
 .header__theme-menu-button:focus-visible {
   border-block-end: 1px solid rgba(50, 49, 45, 0.4);
 }
