--- a/styles/style.css
+++ b/styles/style.css
@@ -13,11 +13,13 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
-  gap: 58px;
+  gap: 60px;
 }
 
 .decorated-zone {
   position: relative;
+  min-width: 100%;
+  min-height: 100vh;
 }
 
 .decorated-zone::before,
@@ -43,46 +45,12 @@
 .header {
   position: relative;
   display: grid;
-  gap: 58px;
-}
-
-.header__logo {
-  position: relative;
-}
-
-.header__logo::before {
-  content: 'rec';
-  position: absolute;
-  left: calc(100%-52px);
-  top: 0;
-  right: 0;
-  bottom: 0;
-  text-transform: uppercase;
-  color: var(--accent-color);
-  margin-inline-end: 29px;
-}
-
-.header__logo::after {
-  content: '';
-  position: absolute;
-  left: calc(100%-18px);
-  top: 7px;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  align-items: start;
-  justify-content: start;
-  border-radius: 50%;
-  background: var(--accent-color);
-  width: 9px;
-  height: 9px;
-  box-shadow: 0px 0px 4px 2px var(--accent-color);
-  margin-inline-end: 8px;
+  grid-template-rows: min-content 1fr min-content 1fr;
 }
 
 .header__theme-menu {
- padding-block-start: 54px;
  justify-self: right;
+ align-self: center;
 }
 
 .header__theme-menu-list {
@@ -127,11 +95,12 @@
   letter-spacing: 0em;
   text-align: left;
   justify-self: flex-start;
+  align-self: center;
 }
 
 .header__text {
   justify-self: flex-end;
-  margin-block-end: 58px;
+  align-self: center;
 }
 
 .title-decor {
@@ -143,6 +112,12 @@
   line-height: 23px;
   letter-spacing: 0em;
   text-align: left;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .content {
@@ -160,7 +135,7 @@
 .article {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 12px;
 }
 
 .article__title {
@@ -170,7 +145,6 @@
 .article__text {
   color: var(--text-color);
 }
-
 
 .article__link {
   text-decoration: none;
@@ -197,22 +171,18 @@
 
 .gallery__list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 355px);
   place-items: center;
   gap: 10px;
   list-style: none;
 }
 
 .gallery__image {
-  display: block;
   width: 100%;
-  height: 100%;
   object-fit: cover;
   object-position: center;
 }
 
 .footer {
-  min-height: 668px;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -227,11 +197,16 @@
 }
 
 @media (min-width: 768px) {
+  .header {
+    position: relative;
+  }
+
   .header__text {
     max-width: 50%;
   }
 
   .content {
+    gap: 20px;
     grid-template-columns: repeat(3, 1fr);
   }
 
@@ -240,10 +215,11 @@
    }
 
   .article {
+    gap: 10px;
     grid-column: 2 / 4;
   }
 
-  .content:nth-of-type(2) .content__title{
+  .content:nth-of-type(2) .content__title {
     grid-column: 1 / 1;
     grid-row: 1;
    }
@@ -254,36 +230,36 @@
 
   .gallery__list {
     display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(3, auto);
-    place-items: center;
-    gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 20px;
+  }
 
+  .gallery__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+  .gallery__list-item {
+    width: 100%;
+    height: 100%;
   }
 
   .gallery__list-item:nth-child(1) {
-    grid-column: 1 / span 2;
-    grid-row: 1;
+    grid-column: span 2;
   }
 
   .gallery__list-item:nth-child(2) {
-    grid-column: 3 / -1;
-    grid-row: 1 / 3;
+    grid-row: span 2;
   }
 
   .gallery__list-item:nth-child(3) {
-    grid-column: 1 / 2;
-    grid-row: 2 / 4;
-  }
-
-  .gallery__list-item:nth-child(4) {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    grid-row: span 2;
   }
 
   .gallery__list-item:nth-child(5) {
-    grid-column: 2 / -1;
-    grid-row: 3 / 4;
+    grid-column: span 2;
   }
 
 }
@@ -291,6 +267,7 @@
 @media (min-width: 1024px) {
   .header__theme-menu {
     justify-self: center;
+    align-self: flex-start;
   }
 
   .header__theme-menu-list {
@@ -302,4 +279,5 @@
     grid-column: auto;
     grid-row: 2;
   }
+
 }
