--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,7 +13,7 @@
   --text-accent-color: #DB00FF;
   --text-color: #F1B2CE;
   --bg-color: #000028;
-  background-image: url("/images/cover-image-dark.png");
+  background-image: url("../images/cover-image-dark.png");
 }
 
 @media (prefers-color-scheme: dark) {
