--- a/styles/light.css
+++ b/styles/light.css
@@ -13,7 +13,7 @@
   --text-accent-color: #ffc2e6;
   --text-color: #353430;
   --bg-color: #fff1f7;
-  background-image: url("/images/cover-image-light.png");
+  background-image: url("../images/cover-image-light.png");
 }
 
 @media (prefers-color-scheme: light) {
