--- a/styles/style.css
+++ b/styles/style.css
@@ -8,51 +8,115 @@
   background-size: cover;
   background-attachment: fixed;
   background-color: var(--bg-color);
-  font-family: IBM Plex mono, sans-serif;
+  font-family: IBM Plex mono, monospace;
   font-size: 18px;
   padding: 10px;
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 50px;
 }
 
 .decorated-zone {
   position: relative;
   min-width: 100%;
-  min-height: 668px;
+  min-height: 648px;
   max-height: 100vh;
 }
 
-.decorated-zone::before,
-.decorated-zone::after {
-  content: '';
+.decorated-zone::before {
+  content: "";
   position: absolute;
   left: 0;
   top: 0;
   right: 0;
   bottom: 0;
-  border: 1px solid;
-  border-image-source: linear-gradient(var(--accent-color), var(--accent-color)); 
+  background: linear-gradient(
+        to right,
+        var(--accent-color) 25px,
+        transparent 0,
+        transparent calc(100% - 25px),
+        var(--accent-color) 0
+      )
+      0 0 / 100% 1px no-repeat,
+    linear-gradient(
+        to right,
+        var(--accent-color) 25px,
+        transparent 0,
+        transparent calc(100% - 25px),
+        var(--accent-color) 25px
+      )
+      0 100% / 100% 1px no-repeat,
+    linear-gradient(
+        to bottom,
+        var(--accent-color) 25px,
+        transparent 0,
+        transparent calc(100% - 25px),
+        var(--accent-color) 0
+      )
+      0 0 / 1px 100% no-repeat,
+    linear-gradient(
+        to bottom,
+        var(--accent-color) 25px,
+        transparent 0,
+        transparent calc(100% - 25px),
+        var(--accent-color) 25px
+      )
+      100% 0 / 1px 100% no-repeat;
   pointer-events: none;
 }
 
-.decorated-zone::before {
-  border-image-width: 1px 25px;
+.title-decor {
+  color: var(--bg-color);
 }
 
-.decorated-zone::after {
-  border-image-width: 25px 1px;
+.content__title {
+  color: var(--accent-color);
+}
+
+.header__logo {
+  position: relative;
+}
+
+.header__logo::before {
+  content: "rec";
+  position: absolute;
+  left: calc(100% - 60px);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  text-transform: uppercase;
+  color: var(--accent-color);
+  margin-inline-end: 29px;
+}
+
+.header__logo::after {
+  content: "";
+  position: absolute;
+  left: calc(100% - 18px);
+  top: 8px;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  border-radius: 50%;
+  background: var(--accent-color);
+  width: 9px;
+  height: 9px;
+  box-shadow: 0px 0px 4px 2px var(--accent-color);
+  margin-inline-end: 8px;
 }
 
 .header {
   position: relative;
   display: grid;
-  grid-template-rows: min-content 1fr min-content 1fr;
+  grid-template-rows: 0 1fr min-content 1fr;
+  align-items: center;
 }
 
 .header__theme-menu {
- justify-self: right;
- align-self: center;
+  justify-self: right;
+  align-self: center;
 }
 
 .header__theme-menu-list {
@@ -61,13 +125,18 @@
   flex-direction: column;
   gap: 10px;
   justify-content: end;
+  align-items: start;
+}
+
+.header__theme-menu-item {
+  display: flex;
+  justify-content: center;
+  align-items: start;
 }
 
 .header__theme-menu-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font: 400;
+  font-weight: 400;
+  width: 70px;
   text-transform: lowercase;
   border-style: none;
   color: var(--accent-color);
@@ -76,21 +145,21 @@
 }
 
 .header__theme-menu-button_active {
-  pointer-events: none; 
   border: 1px solid var(--accent-color);
 }
 
 .header__theme-menu-button:hover {
   outline: 1px solid rgba(255, 0, 112, 0.4);
- }
- 
- .header__theme-menu-button:focus {
-   outline-color: transparent;
- }
- 
- .header__theme-menu-button:focus-visible {
+}
+
+.header__theme-menu-button:focus {
+  outline-color: transparent;
+}
+
+.header__theme-menu-button:focus-visible {
+  outline-color: transparent;
   border-block-end: 1px solid rgba(255, 0, 112, 0.4);
- }
+}
 
 .header__title {
   color: var(--text-accent-color);
@@ -123,12 +192,12 @@
 .main {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 50px;
 }
 
 .content {
   display: grid;
-  gap: 25px;
+  gap: 20px;
 }
 
 .content__title {
@@ -141,7 +210,7 @@
 .article {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 9px;
 }
 
 .article__title {
@@ -172,13 +241,13 @@
 .gallery {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 14px;
 }
 
 .gallery__list {
   display: grid;
   place-items: center;
-  gap: 10px;
+  gap: 5px;
   list-style: none;
 }
 
@@ -189,7 +258,7 @@
 }
 
 .footer {
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -203,51 +272,65 @@
 }
 
 @media (min-width: 768px) {
-  
   :root {
     --logo-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
-  
-  .header {
-    position: relative;
+
+  .page {
+    padding: 20px;
+    gap: 80px;
   }
 
   .header__text {
     max-width: 50%;
   }
 
+  .decorated-zone {
+    min-height: 984px;
+  }
+
+  .main {
+    gap: 70px;
+  }
+
   .content {
-    gap: 20px;
-    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+    grid-template-columns: 1fr 2fr;
   }
 
   .content__title {
     grid-row: 1 / 4;
-   }
+  }
+
+  .special-title-decor {
+    grid-column: 2 / 3;
+  }
 
   .article {
-    gap: 10px;
-    grid-column: 2 / 4;
+    gap: 5px;
+    grid-column: 2 / 3;
   }
 
   .content:nth-of-type(2) .content__title {
     grid-column: 1 / 1;
     grid-row: 1;
-   }
+  }
 
-   .content:nth-of-type(2) .article {
-    grid-column: 1  / 4;
+  .content:nth-of-type(2) .article {
+    grid-column: 1 / 4;
   }
 
   .gallery__list {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, calc((100% - 40px) / 3));
+    grid-template-rows: repeat(3, calc((100% - 40px) / 3));
+    gap: 20px;
+  }
+
+  .gallery {
     gap: 20px;
   }
 
   .gallery__image {
-    width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
@@ -272,10 +355,13 @@
   .gallery__list-item:nth-child(5) {
     grid-column: span 2;
   }
-
 }
 
 @media (min-width: 1024px) {
+  .decorated-zone {
+    min-height: calc(100vh - 8px);
+  }
+
   .header__theme-menu {
     justify-self: center;
     align-self: flex-start;
@@ -286,9 +372,41 @@
     justify-content: center;
   }
 
+  .main {
+    gap: 60px;
+  }
+
+  .special-title-decor {
+    grid-column: 2 / 4;
+  }
+
+  .article {
+    gap: 3px;
+    grid-column: 2 / 4;
+  }
+
+  .content {
+    gap: 25px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .content__title {
+    grid-row: 1 / 4;
+  }
+
   .content:nth-of-type(2) .article {
     grid-column: auto;
     grid-row: 2;
   }
 
+  .gallery {
+    margin-block-start: 25px;
+    gap: 25px;
+  }
+
+  .gallery__list {
+    grid-template-columns: repeat(3, calc((100% - 50px) / 3));
+    grid-template-rows: repeat(3, calc((100% - 25px) / 3));
+    gap: 25px;
+  }
 }
