--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,8 @@
   font-size: 18px;
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  padding: 10px;
+  gap: 10px;
 }
 
 .decorated-zone {
@@ -175,7 +176,7 @@
   font-family: inherit;
   font-size: 18px;
   font-weight: 700;
-  line-height: 23px;
+  line-height: 23.4px;
   letter-spacing: 0em;
   text-align: left;
 }
@@ -184,6 +185,7 @@
   display: flex;
   flex-direction: column;
   gap: 50px;
+  margin: 40px 0px;
 }
 
 .content {
@@ -193,7 +195,7 @@
 
 .content__title {
   font-weight: 700;
-  line-height: 23px;
+  line-height: 23.4px;
   font-size: 18px;
   color: var(--accent-color);
 }
@@ -201,7 +203,7 @@
 .article {
   display: flex;
   flex-direction: column;
-  gap: 9px;
+  gap: 10px;
 }
 
 .article__title {
@@ -210,6 +212,7 @@
 
 .article__text {
   color: var(--text-color);
+  line-height: 23.4px;
 }
 
 .article__link {
@@ -232,7 +235,7 @@
 .gallery {
   display: flex;
   flex-direction: column;
-  gap: 14px;
+  gap: 10px;
 }
 
 .gallery__list {
