--- a/styles/style.css
+++ b/styles/style.css
@@ -30,39 +30,39 @@
   top: 0;
   right: 0;
   bottom: 0;
+  pointer-events: none;
   background: linear-gradient(
         to right,
-        var(--accent-color) 25px,
+        transparent 0,
         transparent 0,
         transparent calc(100% - 25px),
-        var(--accent-color) 0
+        var(--decoration-color) 0
       )
       0 0 / 100% 1px no-repeat,
     linear-gradient(
         to right,
-        var(--accent-color) 25px,
+        var(--decoration-color) 25px,
         transparent 0,
         transparent calc(100% - 25px),
-        var(--accent-color) 25px
+        transparent 0
       )
       0 100% / 100% 1px no-repeat,
     linear-gradient(
         to bottom,
-        var(--accent-color) 25px,
+        transparent 0,
         transparent 0,
         transparent calc(100% - 25px),
-        var(--accent-color) 0
+        var(--decoration-color) 0
       )
       0 0 / 1px 100% no-repeat,
     linear-gradient(
         to bottom,
-        var(--accent-color) 25px,
+        var(--decoration-color) 25px,
         transparent 0,
         transparent calc(100% - 25px),
-        var(--accent-color) 25px
+        transparent 0
       )
       100% 0 / 1px 100% no-repeat;
-  pointer-events: none;
 }
 
 .header__logo {
@@ -159,7 +159,6 @@
   text-shadow: 4px 4px 0 var(--accent-color);
   font-weight: 700;
   line-height: 96px;
-  letter-spacing: 0em;
   text-align: left;
   justify-self: flex-start;
   align-self: center;
@@ -255,6 +254,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-block-end: -25px;
 }
 
 .footer__title {
@@ -272,7 +272,7 @@
 
   .page {
     padding: 20px;
-    gap: 80px;
+    gap: 20px;
   }
 
   .header__text {
@@ -283,12 +283,18 @@
     min-height: 984px;
   }
 
+  .header__title {
+    margin-inline-start: -20px;
+    line-height: 99px;
+    letter-spacing: 0;
+  }
+
   .main {
-    gap: 70px;
+    gap: 80px;
+    margin: 60px 0px 45px;
   }
 
   .content {
-    gap: 25px;
     grid-template-columns: 1fr 2fr;
   }
 
@@ -301,8 +307,12 @@
   }
 
   .article {
-    gap: 5px;
+    gap: 10px;
     grid-column: 2 / 3;
+  }
+
+  .content:nth-of-type(2) {
+    margin-block-start: -20px;
   }
 
   .content:nth-of-type(2) .content__title {
@@ -316,7 +326,6 @@
 
   .gallery__list {
     grid-template-columns: repeat(3, calc((100% - 40px) / 3));
-    grid-template-rows: repeat(3, calc((100% - 40px) / 3));
     gap: 20px;
   }
 
@@ -329,6 +338,7 @@
     object-fit: cover;
     object-position: center;
   }
+
   .gallery__list-item {
     width: 100%;
     height: 100%;
@@ -349,11 +359,12 @@
   .gallery__list-item:nth-child(5) {
     grid-column: span 2;
   }
+
 }
 
 @media (min-width: 1024px) {
   .decorated-zone {
-    min-height: calc(100vh - 8px);
+    min-height: 728px;
   }
 
   .header__theme-menu {
@@ -367,7 +378,8 @@
   }
 
   .main {
-    gap: 60px;
+    gap: 80px;
+    margin: 60px 0px 45px;
   }
 
   .special-title-decor {
@@ -375,12 +387,11 @@
   }
 
   .article {
-    gap: 3px;
+    gap: 10px;
     grid-column: 2 / 4;
   }
 
   .content {
-    gap: 25px;
     grid-template-columns: repeat(3, 1fr);
   }
 
@@ -394,13 +405,12 @@
   }
 
   .gallery {
-    margin-block-start: 25px;
     gap: 25px;
   }
 
   .gallery__list {
     grid-template-columns: repeat(3, calc((100% - 50px) / 3));
-    grid-template-rows: repeat(3, calc((100% - 25px) / 3));
     gap: 25px;
   }
+
 }
