--- a/styles/dark.css
+++ b/styles/dark.css
@@ -12,6 +12,7 @@
   --accent-color: #ff0070;
   --text-accent-color: #DB00FF;
   --text-color: #F1B2CE;
+  --decoration-color: #ff0070;
   --bg-color: #000028;
   background-image: url("../images/cover-image-dark.png");
 }
