--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,6 +6,7 @@
   --accent-color: #ff0070;
   --text-accent-color: #DB00FF;
   --text-color: #F1B2CE;
+  --decoration-color: #ff0070;
   --bg-color: #000028;
   --logo-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 }
