--- a/styles/style.css
+++ b/styles/style.css
@@ -12,14 +12,14 @@
   font-size: 18px;
   display: flex;
   flex-direction: column;
-  padding: 10px;
-  gap: 10px;
+  padding: var(--padding);
+  gap: var(--padding);
 }
 
 .decorated-zone {
   position: relative;
   min-width: 100%;
-  min-height: 648px;
+  min-height: calc(var(--min-height) - 2 * var(--padding));
   max-height: 100vh;
 }
 
@@ -254,7 +254,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-block-end: -25px;
 }
 
 .footer__title {
@@ -268,23 +267,17 @@
 @media (min-width: 768px) {
   :root {
     --logo-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  }
-
-  .page {
-    padding: 20px;
-    gap: 20px;
+    --padding: 20px;
+    --min-height: 1024px;
   }
 
   .header__text {
     max-width: 50%;
   }
 
-  .decorated-zone {
-    min-height: 984px;
-  }
-
   .header__title {
-    margin-inline-start: -20px;
+    position: relative;
+    inset-inline-start: -20px;
     line-height: 99px;
     letter-spacing: 0;
   }
@@ -299,20 +292,15 @@
   }
 
   .content__title {
-    grid-row: 1 / 4;
-  }
-
-  .special-title-decor {
-    grid-column: 2 / 3;
+    grid-row: 1 / 3;
   }
 
   .article {
     gap: 10px;
-    grid-column: 2 / 3;
   }
 
-  .content:nth-of-type(2) {
-    margin-block-start: -20px;
+  .content:nth-of-type(3) .content__title{
+    grid-row: 1 / 7;
   }
 
   .content:nth-of-type(2) .content__title {
@@ -321,7 +309,7 @@
   }
 
   .content:nth-of-type(2) .article {
-    grid-column: 1 / 4;
+    grid-column: span 2;
   }
 
   .gallery__list {
@@ -363,8 +351,11 @@
 }
 
 @media (min-width: 1024px) {
-  .decorated-zone {
-    min-height: 728px;
+
+  :root {
+    --logo-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --padding: 20px;
+    --min-height: 768px;
   }
 
   .header__theme-menu {
@@ -383,34 +374,31 @@
   }
 
   .special-title-decor {
-    grid-column: 2 / 4;
+    grid-column: span 2;
   }
 
   .article {
     gap: 10px;
-    grid-column: 2 / 4;
+    grid-column: span 2;
   }
 
   .content {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .content__title {
-    grid-row: 1 / 4;
-  }
-
   .content:nth-of-type(2) .article {
     grid-column: auto;
     grid-row: 2;
   }
+}
 
-  .gallery {
-    gap: 25px;
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-color: #ff8dcb;
+    --text-accent-color: #ffc2e6;
+    --text-color: #353430;
+    --decoration-color: #353430;
+    --bg-color: #fff1f7;
+    background-image: url("../images/cover-image-light.png");
   }
-
-  .gallery__list {
-    grid-template-columns: repeat(3, calc((100% - 50px) / 3));
-    gap: 25px;
-  }
-
 }
