--- a/styles/style.css
+++ b/styles/style.css
@@ -142,12 +142,12 @@
 }
 
 .header__theme-menu-button:focus {
-  outline-color: transparent;
+  outline-style: none;
 }
 
 .header__theme-menu-button:focus-visible {
-  border-block-end: 1px solid rgba(255, 0, 112, 0.4);
-  outline-color: transparent;
+  border-block-end: 1px solid var(--decoration-color);
+  outline-style: none;
 }
 
 .header__title {
