--- a/styles/light.css
+++ b/styles/light.css
@@ -16,7 +16,7 @@
   --bg-color: #fff1f7;
   background-image: url("../images/cover-image-light.png");
 }
-
+/*
 .theme_light .header__logo::before {
   content: "";
 }
@@ -54,4 +54,4 @@
 
 .theme_light .content__title {
   color: var(--text-color);
-}
+}*/
