--- a/styles/light.css
+++ b/styles/light.css
@@ -3,6 +3,21 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
+:root.theme_light {
+  /* сохраните этот селектор в приведённом виде.
+    Так стили написанные ниже будут иметь больший вес,
+    чем стили в медиазапросе предпочтений пользователя
+  */
+  --accent-color: #ff8dcb;
+  --text-accent-color: #ffc2e6;
+  --text-color: #353430;
+  --decoration-color: #353430;
+  --bg-color: #fff1f7;
+  --bg-image: url("../images/cover-image-light.png");
+  --display-decoration: hidden;
+  --hover-color: rgba(50, 49, 45, 0.4);
+  --title-color: #353430;
+}
 
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
@@ -14,44 +29,22 @@
   --text-color: #353430;
   --decoration-color: #353430;
   --bg-color: #fff1f7;
-  background-image: url("../images/cover-image-light.png");
-}
-/*
-.theme_light .header__logo::before {
-  content: "";
-}
-
-.theme_light .header__logo::after {
-  content: "";
-  box-shadow: none;
-  width: 0;
-  height: 0;
+  --bg-image: url("../images/cover-image-light.png");
+  --display-decoration: hidden;
+  --hover-color: rgba(50, 49, 45, 0.4);
+  --title-color: #353430;
 }
 
-.theme_light .header__theme-menu-button {
-  color: var(--text-color);
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-color: #ff8dcb;
+    --text-accent-color: #ffc2e6;
+    --text-color: #353430;
+    --decoration-color: #353430;
+    --bg-color: #fff1f7;
+    --bg-image: url("../images/cover-image-light.png");
+    --display-decoration: hidden;
+    --hover-color: rgba(50, 49, 45, 0.4);
+    --title-color: #353430;
+  }
 }
-
-.theme_light .header__theme-menu-button_active {
-  border: 1px solid var(--text-color);
-}
-
-.theme_light .header__theme-menu-button:hover {
-  outline: 1px solid rgba(50, 49, 45, 0.4);
-}
-
-.header__theme-menu-button:focus-visible {
-  border-block-end: 1px solid rgba(50, 49, 45, 0.4);
-}
-
-.theme_light .article__link:focus-visible {
-  outline: 1px solid var(--text-color);
-}
-
-.theme_light .title-decor {
-  color: var(--text-color);
-}
-
-.theme_light .content__title {
-  color: var(--text-color);
-}*/
