--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,12 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   padding: var(--padding);
   font-family: IBM Plex mono, monospace;
   font-size: 18px;
   background-color: var(--bg-color);
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  background-image: url("../images/cover-image-dark.png");
+  background-image: var(--bg-image);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -66,36 +66,6 @@
   position: relative;
 }
 
-.header__logo::before {
-  content: "rec";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: calc(100% - 60px);
-  margin-inline-end: 29px;
-  color: var(--decoration-color);
-  text-transform: uppercase;
-}
-
-.header__logo::after {
-  content: "";
-  position: absolute;
-  top: 8px;
-  right: 0;
-  bottom: 0;
-  left: calc(100% - 18px);
-  display: flex;
-  justify-content: start;
-  align-items: start;
-  width: 9px;
-  height: 9px;
-  margin-inline-end: 8px;
-  border-radius: 50%;
-  box-shadow: 0px 0px 4px 2px var(--decoration-color);
-  background: var(--decoration-color);
-}
-
 .header {
   position: relative;
   display: grid;
@@ -137,16 +107,18 @@
   border: 1px solid var(--decoration-color);
 }
 
-.header__theme-menu-button:hover {
-  outline: 1px solid rgba(255, 0, 112, 0.4);
-}
-
 .header__theme-menu-button:focus {
   outline-style: none;
 }
 
 .header__theme-menu-button:focus-visible {
   border-block-end: 1px solid var(--decoration-color);
+  outline-style: none;
+}
+
+.header__theme-menu-button:hover {
+  border: none;
+  outline: 1px solid var(--hover-color);
   outline-style: none;
 }
 
@@ -158,7 +130,7 @@
   font-size: var(--logo-size);
   line-height: 96px;
   text-align: left;
-  text-shadow: 4px 4px 0 var(--accent-color);
+  text-shadow: 4px 4px 0 var(--shadow-color);
 }
 
 .header__text {
@@ -167,7 +139,7 @@
 }
 
 .title-decor {
-  color: var(--bg-color);
+  color: var(--title-color);
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
@@ -190,7 +162,7 @@
 }
 
 .content__title {
-  color: var(--accent-color);
+  color: var(--decoration-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
@@ -225,7 +197,7 @@
 }
 
 .article__link:focus-visible {
-  outline: 1px solid var(--accent-color);
+  outline: 1px solid var(--decoration-color);
 }
 
 .gallery {
@@ -258,11 +230,10 @@
   font-weight: 700;
   font-size: var(--logo-size);
   line-height: 96px;
-  text-shadow: 2px 2px 0 var(--accent-color);
+  text-shadow: 2px 2px 0 var(--shadow-color);
 }
 
 @media (min-width: 768px) {
-  
   :root {
     --logo-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     --padding: 20px;
@@ -294,8 +265,8 @@
   }
 
   .article {
-    gap: 10px;
     grid-column: 2 / 2;
+    gap: 10px;
   }
 
   .content:nth-of-type(2) .article {
@@ -321,8 +292,8 @@
   }
 
   .gallery__image {
-    height: 100%;
     display: block;
+    height: 100%;
   }
 
   .gallery__list-item {
@@ -379,56 +350,5 @@
 
   .content:nth-of-type(2) .article {
     grid-column: auto;
-  }
-
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    --accent-color: #ff8dcb;
-    --text-accent-color: #ffc2e6;
-    --text-color: #353430;
-    --decoration-color: #353430;
-    --bg-color: #fff1f7;
-    --background-image: url("../images/cover-image-light.png");
-  }
-
-  .header__logo::before {
-    content: "";
-  }
-  
-  .header__logo::after {
-    content: "";
-    box-shadow: none;
-    width: 0;
-    height: 0;
-  }
-  
-  .header__theme-menu-button {
-    color: var(--text-color);
-  }
-  
-  .header__theme-menu-button_active {
-    border: 1px solid var(--text-color);
-  }
-  
-  .header__theme-menu-button:hover {
-    outline: 1px solid rgba(50, 49, 45, 0.4);
-  }
-  
-  .header__theme-menu-button:focus-visible {
-    border-block-end: 1px solid rgba(50, 49, 45, 0.4);
-  }
-  
-  .article__link:focus-visible {
-    outline: 1px solid var(--text-color);
-  }
-  
-  .title-decor {
-    color: var(--text-color);
-  }
-  
-  .content__title {
-    color: var(--text-color);
   }
 }
