--- a/styles/light.css
+++ b/styles/light.css
@@ -3,22 +3,6 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-:root.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-  --accent-color: #ff8dcb;
-  --text-accent-color: #ffc2e6;
-  --text-color: #353430;
-  --decoration-color: #353430;
-  --bg-color: #fff1f7;
-  --bg-image: url("../images/cover-image-light.png");
-  --display-decoration: hidden;
-  --hover-color: rgba(50, 49, 45, 0.4);
-  --title-color: #353430;
-}
-
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
@@ -36,7 +20,7 @@
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
+  .page {
     --accent-color: #ff8dcb;
     --text-accent-color: #ffc2e6;
     --text-color: #353430;
