after third review

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,8 +16,7 @@
 .decorated-zone {
   position: relative;
   min-width: 100%;
-  min-height: var(--min-height);
-  max-height: 100vh;
+  height: 100vh;
   padding: var(--padding) 0;
 }
 
@@ -270,7 +269,6 @@
   :root {
     --logo-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     --padding: 20px;
-    --min-height: 1024px;
   }
 
   .decorated-zone::before {
@@ -359,7 +357,6 @@
 @media (min-width: 1024px) {
   :root {
     --logo-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    --min-height: 768px;
   }
 
   .header__theme-menu {
