--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,6 +11,7 @@
   --bg-color: #000028;
   --logo-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   --padding: 10px;
+  --min-height: 668px;
   --bg-image: url("../images/cover-image-dark.png");
   --display-decoration: visible;
   --hover-color: rgba(255, 0, 112, 0.4);
